Optimize and fix bug in pair reduction